--- a/11-small project/11-smallProject.html
+++ b/11-small project/11-smallProject.html
@@ -20,7 +20,13 @@
                 <ul class="hide">Artist</ul>
                 <ul class="hide">Release Date</ul>
         </div>
-        <div class="detail"></div>
+        <div class="detail">
+            <img src="https://raw.githubusercontent.com/reeserocks/smallProject/refs/heads/main/11-small%20project/images/inrainbows.png">
+            <br>
+            <h2>Jigsaw Falling Into Place</h2>
+            <h3>Radiohead</h3>
+            <h4>2007-12-28</h4>
+        </div>
         <div class="embed">
             <iframe style="border-radius:50px" src="https://open.spotify.com/embed/playlist/41Gck3SWlk5epSSgeCBSNp?utm_source=generator" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
